--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -18,6 +18,8 @@
             <input type="password" name="password" required>
             <br>
             <input type="submit" value="Login">
+            <br>
+            <a href="{% url 'cadastro' %}">Não possui uma conta? Faça Cadastro</a>
         </form>
     </body>
 </html>
