--- a/usuarios/templates/task_list.html
+++ b/usuarios/templates/task_list.html
@@ -47,5 +47,15 @@
             <a href="{% url 'logout' %}" class="btn">Logout</a>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            {% if messages %}
+                {% for message in messages %}
+                    alert("{{ message|escapejs }}");
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
 </body>
 </html>
